# SimpleChecker

./: CMakeLists.txt  SimpleChecker.cpp  StaticNonPODChecker.cpp  llvm_static_analyzer.cpp
example/: example.cpp
